fix placement and spacing of baby and married.

--- a/Travel Journal/styles.css
+++ b/Travel Journal/styles.css
@@ -8,7 +8,7 @@
         font-family: lucida handwriting;
         font-size: 15px;
     }
-    
+
     * {
         font-size: 15px;
     }
@@ -76,12 +76,7 @@ li a:hover:not(.active) {
     font-size: 20px;
 }
 
-.break {
-    width: auto;
-    height: 50vh;
-}
-
-.yearcar, .yearcamp, .yearestablished {
+.yearcar, .yearcamp, .yearbaby, .yearestablished {
     font-size: 50px;
     font-weight: bold;
     text-shadow: 1px 1px 2px black, 0 0 25px rgb(135, 135, 177), 0 0 5px rgb(36, 36, 66);
@@ -90,12 +85,12 @@ li a:hover:not(.active) {
     padding-top: 20%;
 }
 
-.cartrips, .campingtrips, .married {
+.cartrips, .campingtrips, .baby, .married {
     font-size: 30;
     font-family: Lucida handwriting;
     font-stretch: expanded;
     letter-spacing: 5px;
-    text-align: left;
+    text-align: center;
     padding: 25px;
 }
 
@@ -107,11 +102,31 @@ li a:hover:not(.active) {
     height: 100vh;
 }
 
+.rowslim {
+    display: flex;
+    flex-direction: row;
+    text-align: center;
+    justify-content: center;
+    height: 40vh;
+}
+
+.yearestablished {
+    font-size: 50px;
+    font-weight: bold;
+    text-shadow: 1px 1px 2px black, 0 0 25px rgb(135, 135, 177), 0 0 5px rgb(36, 36, 66);
+    text-align: center;
+    justify-content: center;
+    padding-top: 0;
+}
+
+.married {
+    font-size: 30px;
+}
+
 .column {
     display: flex;
     flex-direction: column;
-    padding: 20%;
-    width: 30%;
+    width: 40%;
 }
 
 .circle {
